--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "php artisan clear-compiled",
+            "chmod -R 777 public/"
         ]
     }
 }
